# catalogue_server

./: .gitignore  README.md  pyproject.toml
catalogue_server/helpers/: solr.py
catalogue_server/medieval/: configuration.yml  server.py
catalogue_server/medieval/static/css/: style.css  style.css.map
catalogue_server/medieval/static/scss/: _content.scss  style.scss
catalogue_server/medieval/static/scss-old/: style.scss
catalogue_server/medieval/static/scss-old/custom/: _medieval_content.scss  _medieval_footer.scss  _medieval_header.scss  _medieval_variables.scss
catalogue_server/medieval/templates/: about.html  base.html  contact.html  help.html  index.html  not-found.html  record.html  search.html  terms.html
catalogue_server/medieval/templates/blocks/: facet-sidebar.html  facet.html  no-results.html  search-bar.html  search-info.html  search-results.html  search-sidebar.html
catalogue_server/medieval/templates/macros/: facet-macros.html
catalogue_server/medieval/templates/record-types/: author-link-block.html  external-links-block.html  location-link-block.html  manuscript-link-block.html  manuscript-record.html  notes-block.html  person-record.html  place-record.html  work-link-block.html  work-record.html
catalogue_server/static/js/: application.js  keyboard.js  script.js
sample_data/medieval/: manuscripts_index.xml  persons_index.xml  places_index.xml  works_index.xml
solr/medieval-mss/conf/: mapping-FoldToASCII.txt  schema.xml  solrconfig.xml  stopwords.txt  synonyms.txt  wdtypes.txt
solr/medieval-mss/conf/lang/: en_GB.aff  en_GB.dic
(+15 files in other folders)
