[tool.poetry]
name = "catalogue_server"
version = "0.1.0"
description = ""
authors = ["Andrew Hankinson <andrew.hankinson@bodleian.ox.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.6.2"
jinja2 = "^3.-.1"
pysolr = "^3.9.0"
pyyaml = "^5.4.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
